# simba

./: .gitignore  CMakeLists.txt  README.md  README.rm  README.txt  Readme.txt
Applications/: CMakeLists.txt
Applications/Examples/: CMakeLists.txt
Applications/Examples/KeyboardCarCommander/: CMakeLists.txt  main.cpp
Applications/Examples/Matlab_interface/: SETUP.m  SimBAPlanner.m  node_mex.cpp  node_wrapper.h
Applications/Examples/PathPlannerTest/: CMakeLists.txt  ClickHandler.h  GLBulletDebugDrawer.cpp  GLBulletDebugDrawer.h  GLCar.h  GLWidgetPanel.h  PathPlannerInterpolation.cpp  PathPlannerSolver.cpp  PathPlannerTest.cpp  PathPlannerTest.h  PathPlannerTester.cpp  PathPlannerTester.h  PlannerGui.cpp  PlannerGui.h  UiCommon.h  gui_params.csv  raycast_params.csv
Applications/Examples/SimpRobot/: CMakeLists.txt  SimpRobot.cpp
Applications/Examples/SimpleCar/: SimpleCar.cpp
Applications/Examples/SimpleRobotProxy/: CMakeLists.txt  SimpleRobotProxy.cpp
Applications/Examples/TestCam/: CMakeLists.txt  TestCam.cpp
Applications/Examples/WaypointAddition/: CMakeLists.txt  main.cpp
Applications/LocalSim/: CMakeLists.txt  Keycontrol.cpp  Keycontrol.h  LocalSim.cpp  LocalSim.h
Applications/MatlabInterface/: .#PlannerMaster_mex.cpp  CMakeLists.txt  GenMesh.m  Makefile  PlotMesh.m  SimbaMaster.h  SimbaMaster.m
Applications/MatlabInterface/PlannerMaster/: #PlannerMaster.h#  CMakeLists.txt  Makefile  PlannerMaster.h  PlannerMaster.m  PlannerMaster_mex.cpp
Applications/PathPlanner/: CMakeLists.txt  MatlabMaster.cpp  MatlabMaster.h  PathPlanner.cpp  PathPlanner.h  SimBAPlanner.m  flycheck-SimPlanner.cpp
Applications/RobotProxy/: CMakeLists.txt  RobotProxy.cpp  RobotProxy.h
Applications/SimPlanner/: CMakeLists.txt  CPPMaster.cpp  CPPMaster.h  ClickHandler.h  GLBulletDebugDrawer.cpp  GLCar.h  GLWidgetPanel.h  MatlabMaster.cpp  PlannerGui.cpp  PlannerLibTest.cpp  PlannerLibTest.h  SimBAPlanner.m  SimPlanner.cpp  SimPlanner.h  UiCommon.h  gui_params.csv  raycast_params.csv
Applications/SimPlanner/MatlabInterface/: GenMesh.m  Makefile  PlotMesh.m  SimBAPlanner.m  node_mex.cpp  node_wrapper.h
Applications/StateKeeper/: CMakeLists.txt  StateKeeper.cpp  StateKeeper.h
Examples/: CMakeLists.txt
Examples/SimpRobot/: CMakeLists.txt
Examples/SimpleCar/: SimpleCar.cpp
Examples/TestCam/: CMakeLists.txt
RobotProxy/: CMakeLists.txt  RobotProxy.cpp  RobotProxy.h
SimBA/: CMakeLists.txt  SimBAConfig.cmake.in  config.h.in
SimBA/Managers/: NetworkManager.cpp  NetworkManager.h  RobotsManager.cpp  RobotsManager.h  SimDeviceManager.cpp  SimDeviceManager.h  StateKeeper.cpp  StateKeeper.h  WorldManager.h
SimBA/ModelGraph/: Body.h  BulletModelGraphAgent.h  Constraint.h  EigenHelpers.h  EigenToBullet.h  GLHeightMap.h  Joint.h  ModelGraphBuilder.cpp  ModelGraphBuilder.h  ModelNode.h  PhyModelGraphAgent.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngineHelpers.h  RaycastVehicle.h  RenderEngine.cpp  RenderEngine.h  Shape.h  SimRaycastVehicle.h  VehicleEnums.h
SimBA/ModelGraph/Bullet_shapes/: bullet_cube.h  bullet_cylinder.h  bullet_heightmap.h  bullet_mesh.h  bullet_plane.h  bullet_shape.h  bullet_sphere.h  bullet_vehicle.h
SimBA/Network/: CMakeLists.txt  Tools.h  WorldState.h
SimBA/PB_Headers/: BVP.proto  CMakeLists.txt  SimMessages.proto
SimBA/SimDevices/: SimDeviceInfo.h  SimDevices.cpp  SimDevices.h
SimBA/SimDevices/Controller/: CarController.h  Controller.h  PoseController.h  SimpleAIController.h  SimpleController.h
SimBA/SimDevices/Sensor/: SimCam.h  SimCamera.h  SimGPS.h  SimLaser2D.h  SimLaser3D.h  SimOdometry.h  SimVicon.h  lcmod.xml  rcmod.xml
SimBA/SimRobots/: MobileModel.h  SimRobot.h  SimWorld.h
SimBA/URDFParser/: GenURIFromURDF.h  LocalSimURDFParser.h  RobotProxyURDFParser.h  RobotProxyURDFParser.h.autosave  StateKeeperURDFParser.h  TinXMLTool.h  TinyXMLTool.h  URDF_Parser.cpp  URDF_Parser.h
SimBA/Utils/: CVarHelpers.h  ConvertName.h  SaveImages.h
StateKeeper/: CMakeLists.txt  StateKeeper.cpp  StateKeeper.h
apps/: CMakeLists.txt
apps/Examples/: CMakeLists.txt
apps/Examples/SimpRobot/: CMakeLists.txt  SimpRobot.cpp
apps/Examples/SimpleCar/: CMakeLists.txt
apps/Examples/SimpleRobotProxy/: SimpleRobotProxy.cpp
apps/Examples/TestCam/: CMakeLists.txt  TestCam.cpp
apps/Robot/: CMakeLists.txt  Robot.cpp
apps/RobotProxy/: CMakeLists.txt  Keycontrol.h  RobotProxy.cpp  RobotProxy.h
apps/StateKeeper/: CMakeLists.txt  StateKeeper.cpp  StateKeeper.h
cmake_modules/: FindBullet.cmake
media/: model.blend
media/LostTemple/: LostTempleSUMap.dae  LostTempleSUMapRAMPS.dae
media/herbie/: herbie.blend  wheel.blend
src/: CMakeLists.txt
src/Device/: SimCam.h  SimDeviceInfo.h  SimDeviceManager.h  SimDevices.h  SimGPS.h  SimLaser2D.h  SimLaser3D.h  SimOdometry.h  SimVicon.h  lcmod.xml
src/Device/Controller/: Controller.h  HingeController.h  PIDController.h  PoseController.h  SimpleAIController.h  SimpleController.h
src/Device/Sensor/: SimCam.h  SimDeviceInfo.h  SimGPS.h  SimVicon.h
src/Managers/: NetworkManager.cpp  NetworkManager.h  RobotsManager.cpp  RobotsManager.h  SimDeviceManager.cpp  SimDeviceManager.h
src/ModelGraph/: Body.h  BulletModelGraphAgent.h  CMakeLists.txt  Joint.h  Model.h  ModelGraphBuilder.h  ModelNode.h  PhyModelGraphAgent.h  PhysicsClass.h  PhysicsEngine.h  RenderClass.h  RenderModelGraphAgent.h
src/Network/: CMakeLists.txt  Messages.h  NetworkManager.h  SimMessages.proto
src/Robots/: RobotsManager.h  SimRobot.h
src/URDFParser/: CMakeLists.txt  RobotProxyURDFParser.h  TinXMLTool.h  URDFParser.h
src/Utils/: ConvertName.h  MatrixTools.h  SE3.h
src/World/: WorldManager.h
urdf/: #Robot.xml#  Camera.xml  Car.xml  CityBlock-luma.xml  Create.xml  HeightmapWorld.xml  Hinge2Car.xml  HingeCar.xml  LostWorld.xml  RaycastVehicle-luma.xml  RaycastVehicle.xml  Robot.xml  TestCam.xml  World.xml  World_MATLAB.xml
urdf/Robots/: PlannerVehicle.xml  RaycastVehicle.xml
urdf/Worlds/: world_cityblock.xml  world_fine.xml  world_heightmap.xml  world_localplanner.xml  world_lookup_bumpy.xml
(+4 files in other folders)
